--- a/libft/Makefile
+++ b/libft/Makefile
@@ -7,7 +7,7 @@ SRCS	=	ft_atoi.c	ft_calloc.c	ft_isalpha.c	ft_isdigit.c	ft_striteri.c	\
 	ft_lstnew.c	ft_lstadd_front.c	ft_lstsize.c	ft_lstlast.c	ft_lstadd_back.c	\
 	ft_lstdelone.c	ft_lstclear.c	ft_lstiter.c	ft_lstmap.c \
 	ft_numlen.c ft_putnbr_int.c ft_putcharlen.c thex.c print_d.c print_u.c print_p.c ft_print.c ft_putstrlen.c \
-	get_next_line.c get_next_line_utils.c \
+	get_next_line.c get_next_line_utils.c  ft_strlen_sst.c ft_strndup.c\
 
 NAME	=	libft.a
 
